--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<app-button></app-button>
+<!-- <app-button></app-button> -->
 <!-- <hr>
 <app-typografy></app-typografy> -->
+<!-- <br>
+<app-badge></app-badge> -->
+<!-- <br>
+<app-progressspinner></app-progressspinner> -->
+<!-- <app-toolbar></app-toolbar> -->
+<app-sidenav></app-sidenav>
