--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -178,8 +178,11 @@
     </div>
   </div>
 </section>
+<br />
 <mat-divider></mat-divider>
 <br />
+<p>button Toggle!</p>
+
 <div>
   <mat-button-toggle #toggleBtn checked="true" disableRipple disabled
     >toggle</mat-button-toggle
@@ -196,4 +199,9 @@
   </mat-button-toggle-group>
   {{ toggleGroup.value }}
 </div>
+<div>
+  <mat-icon color="primary">star</mat-icon>
+</div>
+
+
 
