--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,5 @@
 <!-- <br>
 <app-progressspinner></app-progressspinner> -->
 <!-- <app-toolbar></app-toolbar> -->
-<app-sidenav></app-sidenav>
+<!-- <app-sidenav></app-sidenav> -->
+<app-menu></app-menu>
