--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,7 @@
 <app-progressspinner></app-progressspinner> -->
 <!-- <app-toolbar></app-toolbar> -->
 <!-- <app-sidenav></app-sidenav> -->
-<app-menu></app-menu>
+<!-- <app-menu></app-menu> -->
+<!-- <app-list></app-list> -->
+<!-- <app-gridlist></app-gridlist> -->
+<app-expansionpanel></app-expansionpanel>
