--- a/src/app/expansionpanel/expansionpanel.component.html
+++ b/src/app/expansionpanel/expansionpanel.component.html
@@ -1,4 +1,4 @@
-<mat-accordion multi="true" hideToggle>
+<mat-accordion multi="true">
     <mat-expansion-panel>
         <mat-expansion-panel-header>
             <mat-panel-title>
