--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,5 @@
 <!-- <app-menu></app-menu> -->
 <!-- <app-list></app-list> -->
 <!-- <app-gridlist></app-gridlist> -->
-<app-expansionpanel></app-expansionpanel>
+<!-- <app-expansionpanel></app-expansionpanel> -->
+<app-cards></app-cards>
