--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,4 +11,8 @@
 <!-- <app-list></app-list> -->
 <!-- <app-gridlist></app-gridlist> -->
 <!-- <app-expansionpanel></app-expansionpanel> -->
-<app-cards></app-cards>
+<!-- <app-cards></app-cards> -->
+<!-- <app-tabs></app-tabs> -->
+<!-- <app-stepper></app-stepper> -->
+<!-- <app-input></app-input> -->
+<app-select></app-select>
