--- a/src/app/check-box-radio-button/check-box-radio-button.component.html
+++ b/src/app/check-box-radio-button/check-box-radio-button.component.html
@@ -1,1 +1,21 @@
-<p>check-box-radio-button works!</p>
+<mat-checkbox>
+    Subscribe
+</mat-checkbox>
+<br>
+<mat-checkbox labelPosition="before">
+    Subscribe
+</mat-checkbox>
+<br>
+<mat-checkbox color="primary">
+    Subscribe
+</mat-checkbox>
+<br>
+<mat-checkbox color="warn">
+    Subscribe
+</mat-checkbox>
+<mat-divider></mat-divider>
+<mat-radio-group>
+    <mat-radio-button value="angular" color="primary">Angular</mat-radio-button>
+    <mat-radio-button value="react">React</mat-radio-button>
+    <mat-radio-button value="vue" color="warn">Vue</mat-radio-button>
+</mat-radio-group>
