--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,4 +16,9 @@
 <!-- <app-stepper></app-stepper> -->
 <!-- <app-input></app-input> -->
 <!-- <app-select></app-select> -->
-<app-autocomplete></app-autocomplete>
+<!-- <app-autocomplete></app-autocomplete> -->
+<!-- <app-check-box-radio-button></app-check-box-radio-button> -->
+<!-- <app-datepicker></app-datepicker> -->
+<!-- <app-tooltip></app-tooltip> -->
+<!-- <app-snackbar></app-snackbar> -->
+<app-dialog></app-dialog>
