--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,4 +21,5 @@
 <!-- <app-datepicker></app-datepicker> -->
 <!-- <app-tooltip></app-tooltip> -->
 <!-- <app-snackbar></app-snackbar> -->
-<app-dialog></app-dialog>
+<!-- <app-dialog></app-dialog> -->
+<app-datatable></app-datatable>
