--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <app-badge></app-badge> -->
 <!-- <br>
 <app-progressspinner></app-progressspinner> -->
-<!-- <app-toolbar></app-toolbar> -->
+<app-toolbar></app-toolbar>
 <!-- <app-sidenav></app-sidenav> -->
 <!-- <app-menu></app-menu> -->
 <!-- <app-list></app-list> -->
@@ -22,4 +22,4 @@
 <!-- <app-tooltip></app-tooltip> -->
 <!-- <app-snackbar></app-snackbar> -->
 <!-- <app-dialog></app-dialog> -->
-<app-datatable></app-datatable>
+<!-- <app-datatable></app-datatable> -->
